apps/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
spec:
  type: ClusterIP
  ports:
    - port: 2283
      targetPort: http
      protocol: TCP
      name: http
      appProtocol: kubernetes.io/ws
    - port: 8081
      targetPort: metrics-api
      protocol: TCP
      name: metrics-api
    - port: 8082
      targetPort: metrics-ms
      protocol: TCP
      name: metrics-ms
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
